--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SESSION_ID=""
+SESSION_ID="IK~lHMQiKIJ#6f6b-ffGl_hYvuuizW77j5t8W8oZ7rMNcNq_LstUy6o"
 AUTO_READ_STATUS=true
 STATUS_READ_MSG="*Status Seen By JAWAD-MD 👻🤍*"
 AUTO_STATUS_REPLY=false
